--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,61 @@
  *= require_tree .
  *= require_self
  */
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.flex {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.home-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  height: 100vh;
+}
+
+.home-page h1 {
+  color: #434b54;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+  font-size: 30px;
+}
+
+.home-page .links {
+  flex-direction: column;
+  margin-top: auto;
+  text-align: center;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.home-page span {
+  display: flex;
+  justify-content: center;
+  width: 85%;
+  padding: 15px;
+  cursor: pointer;
+}
+
+.home-page a {
+  text-decoration: none;
+  color: #434b54d3;
+}
+
+.home-page span:nth-child(1) {
+  background: #3778c2;
+  border-radius: 5px;
+}
+
+.home-page span:nth-child(1) a {
+  color: #fff;
+}
