--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,7 @@
-<section>
-<h1>BudgetBuddy</h1>
-<div>
-<span><%= link_to "LOG IN", new_user_session_path %></span>
-
-<span><%= link_to "SIGN UP", new_user_registration_path %></span>
-</div>
+<section class="home-page">
+  <h1 class="center">BudgetBuddy</h1>
+  <div class="links flex">
+    <span class="span"><%= link_to "LOG IN", new_user_session_path %></span>
+    <span><%= link_to "SIGN UP", new_user_registration_path %></span>
+  </div>
 </section>
