--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -54,13 +54,14 @@
   display: flex;
   justify-content: center;
   width: 85%;
-  padding: 15px;
   cursor: pointer;
 }
 
 .home-page a {
   text-decoration: none;
   color: #434b54d3;
+  width: 100%;
+  padding: 15px;
 }
 
 .home-page span:nth-child(1) {
