Style transactions page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,6 +31,7 @@
   align-items: center;
   justify-content: space-between;
   height: 100vh;
+  background: rgb(237, 237, 237);
 }
 
 .home-page h1 {
