--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,13 +1,13 @@
-<section>
-  <div>
-    <div>
-      <%= link_to 'back', root_path %>
-      <h1>NEW ITEM</h1>
-      search
-    </div>    
+<section class="new-transaction">
+  <div class="nav flex">
+    <a class="back" href="<%= root_path %>">
+      <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 1024 1024"><path fill="currentColor" d="M224 480h640a32 32 0 1 1 0 64H224a32 32 0 0 1 0-64z"/><path fill="currentColor" d="m237.248 512l265.408 265.344a32 32 0 0 1-45.312 45.312l-288-288a32 32 0 0 1 0-45.312l288-288a32 32 0 1 1 45.312 45.312L237.248 512z"/></svg>
+    </a>
+    <h1>NEW ITEM</h1>
+    <p></p>
   </div>
 
-  <div>
+  <div class="error-messages">
     <% if @item.errors.any? %>
     <div>
       <p><%= pluralize(@item.errors.count, "error") %> found:</p>
@@ -21,24 +21,24 @@
   </div>
 
   <%= form_with model: @item, url: balance_items_path,  method: :post do | form |%>
-  <div>
+  <div class="item-form">
     <%= form.text_field :name, placeholder: 'Name', required: true%>
 
     <%= form.number_field :amount, placeholder: 'Amount', required: true%>
 
-    <div>
+    <div class="transactions">
       <p> Choose One or More TRANSACTIONS to Add This Item</p>
-      <div class="flex gap-3 flex-wrap px-5">
+      <div class="transaction-list">
         <% @balances.each do |balance| %>
           <% checked = balance.id.to_i == params[:balance_id].to_i ? { checked: true } : {} %>
-            <div class="flex items-center gap-3">
+            <div>
               <%= form.check_box :selected_ids, { multiple: true}.merge(checked), balance.id, nil%>    
                 <%= label_tag "balance_#{balance.id}", balance.name %>
             </div>
           <% end %>
       </div>
     </div>
-    <span class="pt-6 mx-auto"><%= form.submit "Save"%></span>
+    <span class="submit-button"><%= form.submit "Save"%></span>
   </div>
   <% end %>
 
