Complete styling the pages

--- a/app/views/balances/new.html.erb
+++ b/app/views/balances/new.html.erb
@@ -1,8 +1,10 @@
-<section>
-  <div>
-    <%= link_to 'back', root_path %>
-    <h1>NEW TRANSACTIONS</h1>
-    search
+<section class="category">
+  <div class="nav flex">
+    <a class="back" href="<%= root_path %>">
+    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 1024 1024"><path fill="currentColor" d="M224 480h640a32 32 0 1 1 0 64H224a32 32 0 0 1 0-64z"/><path fill="currentColor" d="m237.248 512l265.408 265.344a32 32 0 0 1-45.312 45.312l-288-288a32 32 0 0 1 0-45.312l288-288a32 32 0 1 1 45.312 45.312L237.248 512z"/></svg>
+    </a>
+    <h1>NEW CATEGORY</h1>
+    <p></p>
   </div>    
 
   <div>
@@ -19,10 +21,10 @@
   <div>
 
   <%= form_with model: @balance, url: balances_path,  method: :post do | form |%>
-  <div>
+  <div class="category-form">
     <%= form.text_field :name, placeholder: 'Name', required: true%>
     <%= form.text_field :icon, placeholder: 'icon URL', required: true %>
-    <span><%= form.submit 'Save'%></span>
+    <span class="submit-button"><%= form.submit 'Save'%></span>
   </div>
   <% end %>
 
