Update under instruction

--- a/app/views/balances/index.html.erb
+++ b/app/views/balances/index.html.erb
@@ -24,7 +24,7 @@
 
   <div class="scan-link flex">
     <span class="flex">
-      <%= link_to 'SCAN', new_balance_path, class: "span flex" %>
+      <%= link_to 'Add a new category', new_balance_path, class: "span flex" %>
     </span>
   </div>
 
